# dbase

./: .dockerignore  .gitignore  Dockerfile  LICENSE  docker-compose.yml  pyproject.toml  requirements-dev.txt  requirements.txt  setup.py
.github/workflows/: cd.yml  ci.yml
dbase/: __init__.py  _imports.py  ansii_escape_codes.py  errors.py  logger.py  messages.json  messages.py  security.py
docs/: CHANGELOG.md  CONTRIBUTING.md  README.md
docs/ru/: README_ru.md  REPOSITORY_AUDIT_ru.md
tests/: test_basic.py  test_database_core.py
