[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "dbase"
version = "2.0.1"
description = "Secure database library with encryption support"
readme = "docs/README.md"
requires-python = ">=3.8"
license = {file = "LICENSE"}
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: Free for non-commercial use",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/Danex-Exe/dbase"