[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "dbase"
version = "3.0.0"
description = "Lightweight JSON-based database library with dictionary-like interface"
readme = "docs/README.md"
authors = [
    {name = "Daniil Alekseev", email = "dan.d.alekseev@gmail.com"}
]
license = {text = "MIT"}
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
keywords = ["database", "json", "storage", "nosql", "key-value"]
dependencies = []
requires-python = ">=3.8"

[project.urls]
Homepage = "https://github.com/Danex-Exe/dbase"
Documentation = "https://Danex-Exe.github.io/dbase"
Repository = "https://github.com/Danex-Exe/dbase"
Changelog = "https://github.com/Danex-Exe/dbase/blob/main/docs/CHANGELOG.md"

[tool.setuptools.packages.find]
where = ["."]
include = ["dbase*"]

[tool.black]
line-length = 88
target-version = ['py38']

[tool.isort]
profile = "black"

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "--verbose --strict-markers"
markers = [
    "slow: marks tests as slow",
    "integration: integration tests",
    "unit: unit tests"
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "black>=22.0.0",
    "flake8>=5.0.0",
    "mypy>=0.990",
]